--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prisma-test",
+  "name": "prisma-nestjs-test",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -25,6 +25,8 @@
     "@nestjs/core": "^7.6.15",
     "@nestjs/platform-express": "^7.6.15",
     "@prisma/client": "^2.25.0",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "prisma": "^2.25.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
